// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component dailyBonusCard render when stack progress  1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "marginTop": 18,
        "marginVertical": 20,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 720,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#353535",
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "row",
            "justifyContent": "center",
            "width": "100%",
          },
        ]
      }
    >
      <Text
        alignCenter={false}
        allowFontScaling={true}
        color="#FFFFFF"
        fontFamily="BOLD"
        isUnderlined={false}
        isUppercase={false}
        maxFontSizeMultiplier={1.3}
        paddingLeft={45}
        size="XSMALL"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "CalibreBold",
              "fontSize": 24,
              "justifyContent": "center",
              "textAlign": "left",
              "textDecorationColor": "#FFFFFF",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
            },
            Object {
              "alignSelf": "center",
              "letterSpacing": 0.5,
              "marginTop": 7.5,
              "paddingLeft": 45,
              "paddingVertical": 15,
              "textAlign": "center",
              "width": "85%",
            },
          ]
        }
      >
        
      </Text>
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 12,
            "left": 12,
            "right": 12,
            "top": 12,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 22.5,
            "justifyContent": "flex-end",
            "marginLeft": 0,
            "marginTop": 0,
            "opacity": 1,
          }
        }
        testID="info-bonus-card"
      >
        <Image
          opacity={1}
          resizeMode="contain"
          size={24}
          source={1}
          style={
            Array [
              Object {
                "height": 36,
                "width": 36,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 201.5267175572519,
            "marginLeft": -1.5,
            "width": 462,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderBottomLeftRadius": 12,
              "borderTopLeftRadius": 12,
              "height": 201.5267175572519,
              "width": 210,
            },
          ]
        }
      >
        <Image
          resizeMode="cover"
          source=""
          style={
            Array [
              Object {
                "borderBottomLeftRadius": 12,
                "height": "101%",
                "marginLeft": 2,
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#E5E5E5",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 280,
              },
            ]
          }
        >
          <View
            marginTop={0}
            style={
              Array [
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginTop": 0,
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XXXSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 19.5,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginTop": 6,
                    "textAlign": "center",
                  },
                ]
              }
            >
              
            </Text>
          </View>
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "width": 166,
                  },
                  Object {
                    "marginHorizontal": 15,
                    "marginTop": 32,
                  },
                ]
              }
            >
              <View
                isCenter={true}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                      "marginTop": 0,
                    },
                  ]
                }
              >
                <View
                  bgColor="#F06B59"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#F06B59",
                        "borderRadius": 24,
                        "height": 36,
                        "justifyContent": "center",
                        "width": 36,
                      },
                    ]
                  }
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#000000"
                    fontFamily="BOLD"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="XXXSMALL"
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "CalibreBold",
                          "fontSize": 19.5,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#000000",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "lineHeight": 38,
                          "marginTop": 4,
                        },
                      ]
                    }
                  >
                    0
                  </Text>
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#FFFFFF",
                        "borderRadius": 12,
                        "height": 16,
                        "marginHorizontal": 12,
                        "width": "70%",
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFDB4F",
                          "borderRadius": 12,
                          "height": 16,
                          "position": "absolute",
                          "width": "0%",
                        },
                      ]
                    }
                    width={0}
                  />
                </View>
                <View
                  bgColor="#E5E5E5"
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#E5E5E5",
                        "borderRadius": 24,
                        "height": 36,
                        "justifyContent": "center",
                        "width": 36,
                      },
                    ]
                  }
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#000000"
                    fontFamily="BOLD"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="XXXSMALL"
                    style={
                      Array [
                        Object {
                          "color": "#000000",
                          "fontFamily": "CalibreBold",
                          "fontSize": 19.5,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#000000",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "color": "#FFFFFF",
                          "lineHeight": 38,
                          "marginTop": 4,
                        },
                      ]
                    }
                  >
                    4
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 232,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginHorizontal": 10,
                  "marginVertical": 10,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(96,202,142,1)",
                  "borderRadius": 80,
                  "height": 152,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 200,
                }
              }
              testID="claim-bonus-button"
            >
              <View
                borderRadius={40}
                colorScheme="rgba(128,229,173,1)"
                height={76}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(128,229,173,1)",
                      "borderRadius": 80,
                      "height": 142,
                      "justifyContent": "center",
                      "width": 194,
                    },
                  ]
                }
                width={100}
              >
                <View
                  borderRadius={40}
                  colorScheme="rgba(114,213,158,1)"
                  height={76}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(114,213,158,1)",
                        "borderRadius": 100,
                        "height": 138,
                        "justifyContent": "center",
                        "marginTop": 8,
                        "width": 194,
                      },
                    ]
                  }
                  width={100}
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="SMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 27,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 6,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                          "textAlign": "center",
                        },
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component dailyBonusCard renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "marginTop": 18,
        "marginVertical": 20,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 720,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#353535",
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "row",
            "justifyContent": "center",
            "width": "100%",
          },
        ]
      }
    >
      <Text
        alignCenter={false}
        allowFontScaling={true}
        color="#FFFFFF"
        fontFamily="BOLD"
        isUnderlined={false}
        isUppercase={false}
        maxFontSizeMultiplier={1.3}
        paddingLeft={45}
        size="XSMALL"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "CalibreBold",
              "fontSize": 24,
              "justifyContent": "center",
              "textAlign": "left",
              "textDecorationColor": "#FFFFFF",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
            },
            Object {
              "alignSelf": "center",
              "letterSpacing": 0.5,
              "marginTop": 7.5,
              "paddingLeft": 45,
              "paddingVertical": 15,
              "textAlign": "center",
              "width": "85%",
            },
          ]
        }
      >
        
      </Text>
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 12,
            "left": 12,
            "right": 12,
            "top": 12,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 22.5,
            "justifyContent": "flex-end",
            "marginLeft": 0,
            "marginTop": 0,
            "opacity": 1,
          }
        }
        testID="info-bonus-card"
      >
        <Image
          opacity={1}
          resizeMode="contain"
          size={24}
          source={1}
          style={
            Array [
              Object {
                "height": 36,
                "width": 36,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 201.5267175572519,
            "marginLeft": -1.5,
            "width": 462,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderBottomLeftRadius": 12,
              "borderTopLeftRadius": 12,
              "height": 201.5267175572519,
              "width": 210,
            },
          ]
        }
      >
        <Image
          resizeMode="cover"
          source=""
          style={
            Array [
              Object {
                "borderBottomLeftRadius": 12,
                "height": "101%",
                "marginLeft": 2,
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#E5E5E5",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 280,
              },
            ]
          }
        >
          <View
            marginTop={0}
            style={
              Array [
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginTop": 0,
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XXXSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 19.5,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginTop": 6,
                    "textAlign": "center",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 232,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginHorizontal": 10,
                  "marginVertical": 10,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(96,202,142,1)",
                  "borderRadius": 80,
                  "height": 152,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 200,
                }
              }
              testID="claim-bonus-button"
            >
              <View
                borderRadius={40}
                colorScheme="rgba(128,229,173,1)"
                height={76}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(128,229,173,1)",
                      "borderRadius": 80,
                      "height": 142,
                      "justifyContent": "center",
                      "width": 194,
                    },
                  ]
                }
                width={100}
              >
                <View
                  borderRadius={40}
                  colorScheme="rgba(114,213,158,1)"
                  height={76}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(114,213,158,1)",
                        "borderRadius": 100,
                        "height": 138,
                        "justifyContent": "center",
                        "marginTop": 8,
                        "width": 194,
                      },
                    ]
                  }
                  width={100}
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="SMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 27,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 6,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                          "textAlign": "center",
                        },
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component dailyBonusCard renders correctly when disable is false 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "marginTop": 18,
        "marginVertical": 20,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 720,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#353535",
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "row",
            "justifyContent": "center",
            "width": "100%",
          },
        ]
      }
    >
      <Text
        alignCenter={false}
        allowFontScaling={true}
        color="#FFFFFF"
        fontFamily="BOLD"
        isUnderlined={false}
        isUppercase={false}
        maxFontSizeMultiplier={1.3}
        paddingLeft={0}
        size="XSMALL"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "CalibreBold",
              "fontSize": 24,
              "justifyContent": "center",
              "textAlign": "left",
              "textDecorationColor": "#FFFFFF",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
            },
            Object {
              "alignSelf": "center",
              "letterSpacing": 0.5,
              "marginTop": 7.5,
              "paddingLeft": 0,
              "paddingVertical": 15,
              "textAlign": "center",
              "width": "85%",
            },
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 201.5267175572519,
            "marginLeft": -1.5,
            "width": 462,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderBottomLeftRadius": 12,
              "borderTopLeftRadius": 12,
              "height": 201.5267175572519,
              "width": 210,
            },
          ]
        }
      >
        <Image
          resizeMode="cover"
          source=""
          style={
            Array [
              Object {
                "borderBottomLeftRadius": 12,
                "height": "101%",
                "marginLeft": 2,
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#E5E5E5",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 280,
              },
            ]
          }
        >
          <View
            marginTop={0}
            style={
              Array [
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginTop": 0,
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XXXSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 19.5,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginTop": 6,
                    "textAlign": "center",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 232,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginHorizontal": 10,
                  "marginVertical": 10,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(96,202,142,1)",
                  "borderRadius": 80,
                  "height": 152,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 200,
                }
              }
              testID="claim-bonus-button"
            >
              <View
                borderRadius={40}
                colorScheme="rgba(128,229,173,1)"
                height={76}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(128,229,173,1)",
                      "borderRadius": 80,
                      "height": 142,
                      "justifyContent": "center",
                      "width": 194,
                    },
                  ]
                }
                width={100}
              >
                <View
                  borderRadius={40}
                  colorScheme="rgba(114,213,158,1)"
                  height={76}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(114,213,158,1)",
                        "borderRadius": 100,
                        "height": 138,
                        "justifyContent": "center",
                        "marginTop": 8,
                        "width": 194,
                      },
                    ]
                  }
                  width={100}
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="SMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 27,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 6,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                          "textAlign": "center",
                        },
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component dailyBonusCard renders correctly when disable is true 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "marginTop": 18,
        "marginVertical": 20,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 720,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#353535",
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "row",
            "justifyContent": "center",
            "width": "100%",
          },
        ]
      }
    >
      <Text
        alignCenter={false}
        allowFontScaling={true}
        color="#FFFFFF"
        fontFamily="BOLD"
        isUnderlined={false}
        isUppercase={false}
        maxFontSizeMultiplier={1.3}
        paddingLeft={45}
        size="XSMALL"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "CalibreBold",
              "fontSize": 24,
              "justifyContent": "center",
              "textAlign": "left",
              "textDecorationColor": "#FFFFFF",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
            },
            Object {
              "alignSelf": "center",
              "letterSpacing": 0.5,
              "marginTop": 7.5,
              "paddingLeft": 45,
              "paddingVertical": 15,
              "textAlign": "center",
              "width": "85%",
            },
          ]
        }
      >
        
      </Text>
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 12,
            "left": 12,
            "right": 12,
            "top": 12,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 22.5,
            "justifyContent": "flex-end",
            "marginLeft": 0,
            "marginTop": 0,
            "opacity": 1,
          }
        }
        testID="info-bonus-card"
      >
        <Image
          opacity={1}
          resizeMode="contain"
          size={24}
          source={1}
          style={
            Array [
              Object {
                "height": 36,
                "width": 36,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 201.5267175572519,
            "marginLeft": -1.5,
            "width": 462,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderBottomLeftRadius": 12,
              "borderTopLeftRadius": 12,
              "height": 201.5267175572519,
              "width": 210,
            },
          ]
        }
      >
        <Image
          resizeMode="cover"
          source=""
          style={
            Array [
              Object {
                "borderBottomLeftRadius": 12,
                "height": "101%",
                "marginLeft": 2,
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#E5E5E5",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 280,
              },
            ]
          }
        >
          <View
            marginTop={0}
            style={
              Array [
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginTop": 0,
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XXXSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 19.5,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginTop": 6,
                    "textAlign": "center",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 232,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginHorizontal": 10,
                  "marginVertical": 10,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(160,160,160,1)",
                  "borderRadius": 80,
                  "height": 152,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 200,
                }
              }
              testID="claim-bonus-button"
            >
              <View
                borderRadius={40}
                colorScheme="rgba(209,209,209,1)"
                height={76}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(209,209,209,1)",
                      "borderRadius": 80,
                      "height": 142,
                      "justifyContent": "center",
                      "width": 194,
                    },
                  ]
                }
                width={100}
              >
                <View
                  borderRadius={40}
                  colorScheme="rgba(183,183,183,1)"
                  height={76}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(183,183,183,1)",
                        "borderRadius": 100,
                        "height": 138,
                        "justifyContent": "center",
                        "marginTop": 8,
                        "width": 194,
                      },
                    ]
                  }
                  width={100}
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="SMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 27,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 6,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                          "textAlign": "center",
                        },
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component dailyBonusCard renders correctly when info is false 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "marginTop": 18,
        "marginVertical": 20,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 720,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#353535",
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "row",
            "justifyContent": "center",
            "width": "100%",
          },
        ]
      }
    >
      <Text
        alignCenter={false}
        allowFontScaling={true}
        color="#FFFFFF"
        fontFamily="BOLD"
        isUnderlined={false}
        isUppercase={false}
        maxFontSizeMultiplier={1.3}
        paddingLeft={0}
        size="XSMALL"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "CalibreBold",
              "fontSize": 24,
              "justifyContent": "center",
              "textAlign": "left",
              "textDecorationColor": "#FFFFFF",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
            },
            Object {
              "alignSelf": "center",
              "letterSpacing": 0.5,
              "marginTop": 7.5,
              "paddingLeft": 0,
              "paddingVertical": 15,
              "textAlign": "center",
              "width": "85%",
            },
          ]
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 201.5267175572519,
            "marginLeft": -1.5,
            "width": 462,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderBottomLeftRadius": 12,
              "borderTopLeftRadius": 12,
              "height": 201.5267175572519,
              "width": 210,
            },
          ]
        }
      >
        <Image
          resizeMode="cover"
          source=""
          style={
            Array [
              Object {
                "borderBottomLeftRadius": 12,
                "height": "101%",
                "marginLeft": 2,
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#E5E5E5",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 280,
              },
            ]
          }
        >
          <View
            marginTop={0}
            style={
              Array [
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginTop": 0,
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XXXSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 19.5,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginTop": 6,
                    "textAlign": "center",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 232,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginHorizontal": 10,
                  "marginVertical": 10,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(96,202,142,1)",
                  "borderRadius": 80,
                  "height": 152,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 200,
                }
              }
              testID="claim-bonus-button"
            >
              <View
                borderRadius={40}
                colorScheme="rgba(128,229,173,1)"
                height={76}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(128,229,173,1)",
                      "borderRadius": 80,
                      "height": 142,
                      "justifyContent": "center",
                      "width": 194,
                    },
                  ]
                }
                width={100}
              >
                <View
                  borderRadius={40}
                  colorScheme="rgba(114,213,158,1)"
                  height={76}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(114,213,158,1)",
                        "borderRadius": 100,
                        "height": 138,
                        "justifyContent": "center",
                        "marginTop": 8,
                        "width": 194,
                      },
                    ]
                  }
                  width={100}
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="SMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 27,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 6,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                          "textAlign": "center",
                        },
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Component dailyBonusCard renders correctly when info is true 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "elevation": 8,
        "marginTop": 18,
        "marginVertical": 20,
        "shadowColor": "rgba(53, 53, 53, 0.3)",
        "shadowOffset": Object {
          "height": 4,
          "width": 4,
        },
        "shadowOpacity": 1,
        "shadowRadius": 2,
        "width": 720,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#353535",
            "borderTopLeftRadius": 12,
            "borderTopRightRadius": 12,
            "flexDirection": "row",
            "justifyContent": "center",
            "width": "100%",
          },
        ]
      }
    >
      <Text
        alignCenter={false}
        allowFontScaling={true}
        color="#FFFFFF"
        fontFamily="BOLD"
        isUnderlined={false}
        isUppercase={false}
        maxFontSizeMultiplier={1.3}
        paddingLeft={45}
        size="XSMALL"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontFamily": "CalibreBold",
              "fontSize": 24,
              "justifyContent": "center",
              "textAlign": "left",
              "textDecorationColor": "#FFFFFF",
              "textDecorationLine": "none",
              "textDecorationStyle": "solid",
              "textTransform": "none",
            },
            Object {
              "alignSelf": "center",
              "letterSpacing": 0.5,
              "marginTop": 7.5,
              "paddingLeft": 45,
              "paddingVertical": 15,
              "textAlign": "center",
              "width": "85%",
            },
          ]
        }
      >
        
      </Text>
      <View
        accessible={true}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 12,
            "left": 12,
            "right": 12,
            "top": 12,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#FFFFFF",
            "borderRadius": 22.5,
            "justifyContent": "flex-end",
            "marginLeft": 0,
            "marginTop": 0,
            "opacity": 1,
          }
        }
        testID="info-bonus-card"
      >
        <Image
          opacity={1}
          resizeMode="contain"
          size={24}
          source={1}
          style={
            Array [
              Object {
                "height": 36,
                "width": 36,
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 201.5267175572519,
            "marginLeft": -1.5,
            "width": 462,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "borderBottomLeftRadius": 12,
              "borderTopLeftRadius": 12,
              "height": 201.5267175572519,
              "width": 210,
            },
          ]
        }
      >
        <Image
          resizeMode="cover"
          source=""
          style={
            Array [
              Object {
                "borderBottomLeftRadius": 12,
                "height": "101%",
                "marginLeft": 2,
                "width": "100%",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": "100%",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#E5E5E5",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 280,
              },
            ]
          }
        >
          <View
            marginTop={0}
            style={
              Array [
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginTop": 0,
                },
              ]
            }
          >
            <Text
              alignCenter={false}
              allowFontScaling={true}
              color="#000000"
              fontFamily="REGULAR"
              isUnderlined={false}
              isUppercase={false}
              maxFontSizeMultiplier={1.3}
              size="XXXSMALL"
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "CalibreRegular",
                    "fontSize": 19.5,
                    "justifyContent": "center",
                    "textAlign": "left",
                    "textDecorationColor": "#000000",
                    "textDecorationLine": "none",
                    "textDecorationStyle": "solid",
                    "textTransform": "none",
                  },
                  Object {
                    "marginHorizontal": 4.5,
                    "marginTop": 6,
                    "textAlign": "center",
                  },
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "column",
                "justifyContent": "center",
                "width": 232,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "justifyContent": "center",
                  "marginHorizontal": 10,
                  "marginVertical": 10,
                },
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgba(96,202,142,1)",
                  "borderRadius": 80,
                  "height": 152,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 200,
                }
              }
              testID="claim-bonus-button"
            >
              <View
                borderRadius={40}
                colorScheme="rgba(128,229,173,1)"
                height={76}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "rgba(128,229,173,1)",
                      "borderRadius": 80,
                      "height": 142,
                      "justifyContent": "center",
                      "width": 194,
                    },
                  ]
                }
                width={100}
              >
                <View
                  borderRadius={40}
                  colorScheme="rgba(114,213,158,1)"
                  height={76}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "rgba(114,213,158,1)",
                        "borderRadius": 100,
                        "height": 138,
                        "justifyContent": "center",
                        "marginTop": 8,
                        "width": 194,
                      },
                    ]
                  }
                  width={100}
                >
                  <Text
                    alignCenter={false}
                    allowFontScaling={true}
                    color="#FFFFFF"
                    fontFamily="MEDIUM"
                    isUnderlined={false}
                    isUppercase={false}
                    maxFontSizeMultiplier={1.3}
                    size="SMALL"
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Calibre-Medium",
                          "fontSize": 27,
                          "justifyContent": "center",
                          "textAlign": "left",
                          "textDecorationColor": "#FFFFFF",
                          "textDecorationLine": "none",
                          "textDecorationStyle": "solid",
                          "textTransform": "none",
                        },
                        Object {
                          "marginTop": 6,
                          "paddingHorizontal": 0,
                          "paddingVertical": 0,
                          "textAlign": "center",
                        },
                      ]
                    }
                  >
                    
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
